force-app/main/default/objects/AI_Approval_Policy__c/AI_Approval_Policy__c.object-meta.xml
<CustomObject>
    <description>Defines intelligent approval routing policies. Uses contextual AI evaluation based on discount magnitude, deal value, customer tier, product sensitivity, and rep authority level.</description>
    <label>AI Approval Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Approval Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>