force-app/main/default/objects/AI_Approval_Policy__c/fields/Approval_Chain__c.field-meta.xml
<CustomField>
    <fullName>Approval_Chain__c</fullName>
    <description>Structured text defining the ordered approval chain. Format: LEVEL 1: {Role/User} -> {timeout}h timeout -> escalate. Supports auto-approve conditions.</description>
    <label>Approval Chain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>