force-app/main/default/objects/AI_Approval_Policy__c/fields/Auto_Approve_Condition__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve_Condition__c</fullName>
    <description>Conditions under which this policy auto-approves without routing to approvers. Example: AUTO-APPROVE IF rep authority >= discount AND account = Strategic AND payment = Excellent</description>
    <label>Auto Approve Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>