force-app/main/default/objects/AI_Approval_Policy__c/fields/Min_Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Deal_Value__c</fullName>
    <description>Minimum quote total value that triggers this approval policy evaluation.</description>
    <label>Min Deal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>