force-app/main/default/objects/AI_Approval_Policy__c/fields/Min_Discount_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Min_Discount_Threshold__c</fullName>
    <description>Minimum discount % that triggers this approval policy evaluation.</description>
    <label>Min Discount Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>