force-app/main/default/objects/AI_Approval_Policy__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Policy evaluation order. Lower number = higher priority. First matching policy wins.</description>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>