force-app/main/default/objects/AI_Approval_Policy__c/fields/Trigger_Condition__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Condition__c</fullName>
    <description>Structured natural language conditions that trigger this approval policy. Multi-factor: discount magnitude, deal value, customer tier, product sensitivity, rep authority level.</description>
    <label>Trigger Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>